import Foundation
import XCTest

final class MovieQuizUITests: XCTestCase {

    var app: XCUIApplication!

    override func setUpWithError() throws {
        try super.setUpWithError()
        
        app = XCUIApplication()
        app.launch()
     
        continueAfterFailure = false
    }
    
    override func tearDownWithError() throws {
        try super.tearDownWithError()
        
        app.terminate()
        app = nil
    }
    
    @MainActor
      func testExample() throws {
          
          let app = XCUIApplication()
          app.launch()
      }
        
    func testYesButton() {
           sleep(3)
           
           let firstPoster = app.images["Poster"]
           let firstPosterData = firstPoster.screenshot().pngRepresentation
           
           app.buttons["Yes"].tap()
           sleep(3)
           
           let secondPoster = app.images["Poster"]
           let secondPosterData = secondPoster.screenshot().pngRepresentation
           
           let indexLabel = app.staticTexts["Index"]
           
           XCTAssertNotEqual(firstPosterData, secondPosterData)
           XCTAssertEqual(indexLabel.label, "2/10")
       }
       
       func testNoButton() {
           sleep(3)
           
           let firstPoster = app.images["Poster"]
           let firstPosterData = firstPoster.screenshot().pngRepresentation
           
           app.buttons["No"].tap()
           sleep(3)
           
           let secondPoster = app.images["Poster"]
           let secondPosterData = secondPoster.screenshot().pngRepresentation
           
           let indexLabel = app.staticTexts["Index"]
           
           XCTAssertNotEqual(firstPosterData, secondPosterData)
           XCTAssertEqual(indexLabel.label, "2/10")
       }
    
    func testAlertGameFinish() {
            for _ in 1...10 {
                app.buttons["Yes"].tap()
                sleep(3)
            }
            
            let alert = app.alerts["Этот раунд окончен!"]
            let alertTitle = alert.staticTexts["Этот раунд окончен!"]
            
            XCTAssertTrue(alert.exists)
            XCTAssertTrue(alertTitle.exists)
            XCTAssertEqual(alert.buttons.firstMatch.label, "Сыграть еще раз")
        }
    
    func testAlertDismiss() {
            for _ in 1...10 {
                app.buttons["Yes"].tap()
                sleep(3)
            }
            
            let alert = app.alerts["Этот раунд окончен!"]
            alert.buttons.firstMatch.tap()
            
            sleep(3)
            
            let indexLabel = app.staticTexts["Index"]
            
            XCTAssertFalse(alert.exists)
            XCTAssertTrue(indexLabel.label == "1/10")
        }
}
